add template admin

--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8040
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommercev1
+#spring.datasource.username=tuandat
+spring.datasource.password=tuandat1601
+spring.datasource.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
