--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.username=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.servlet.multipart.max-file-size=50MB
+# Set the maximum request size to 50 MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled= true
+spring.servlet.multipart.file-size-threshold = 2KB
+
